<resources>
    <string name="app_name">FunnyCats</string>
    <string name="iv_container_description">Shake it baby!</string>
    <string name="meow">Meow</string>
    <string name="background_color">Background color</string>
    <string name="color_white">White</string>
    <string name="color_black">Black</string>
    <string name="settings">Settings</string>
    <string name="select_sound">Select meow sound:</string>

    <string name="shared_pref_key_select_sound">shared_pref_key_select_sound</string>
    <string name="pic_instance_state_key">pic_instance_state_key</string>

    <string name="regular_meow">Regular meow</string>
    <string name="big_meow">Big meow</string>
    <string name="dog_meow">MEOW!?</string>
    <string name="shared_pref">shared_pref</string>
</resources>
