<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_meow"
        app:showAsAction="always"
        android:title="@string/meow"/>

    <item
        android:id="@+id/mi_meow_toast"
        android:title="@string/meow"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/group_background_color"
        android:checkableBehavior="single">
            <item android:id="@+id/gi_color_black"
                android:title="@string/color_black"
                android:checked="true"
                />
            <item android:id="@+id/gi_color_white"
                android:title="@string/color_white"/>
    </group>
    <item
        android:id="@+id/mi_settings"
        android:title="@string/settings" />

</menu>